fix wallet Name too long

--- a/app/web/js/pages/personalCenter/WalletList/WalletManage/WalletManage.scss
+++ b/app/web/js/pages/personalCenter/WalletList/WalletManage/WalletManage.scss
@@ -8,12 +8,12 @@
 }
 
 .top {
-  margin: 100px 0 0 0;
+  margin: 40px 0 0 0;
 }
 
 @media (max-height: 568px) {
   .top {
-    margin: 50px 0 0 0;
+    margin: 20px 0 0 0;
   }
 }
 
